<resources>
    <string name="app_name">erp</string>
    <string name="title">统一登录平台</string>
    <string name="nameHint">请输入用户</string>
    <string name="passwordHint">请输入用户密码</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="search">查询</string>
    <string name="add">添加</string>
    <string name="id">id</string>
    <string name="type">快递类型:</string>
    <string name="type1">快递类型</string>
    <string name="billingTime">账单时间:</string>
    <string name="classify">业务分类:</string>
    <string name="reason">业务类型:</string>
    <string name="customerId">customerId:</string>
    <string name="price">金额:</string>
    <string name="prices">金额</string>
    <string name="guest">客户:</string>
    <string name="remark">备注:</string>
    <string name="remark_information">备注</string>
    <string name="back">返回:</string>
    <string name="createuser">创建人:</string>
    <string name="year">年份:</string>
    <string name="month">月份</string>
    <string name="count">数量</string>
    <string name="customer">客户</string>
    <string name="outcome">出账(元)</string>
    <string name="income">进账(元)</string>
    <string name="imbalance">差额(元)</string>
    <string name="monthstatistic">物流账单统计(月份统计)</string>
    <string name="customerstatistic">物流账单统计(客户统计)</string>
    <string name="header_hint_normal">下拉刷新</string>
    <string name="header_hint_ready">松开刷新数据</string>
    <string name="header_hint_loading">正在加载...</string>
    <string name="header_last_time">上次更新时间：</string>
    <string name="footer_hint_normal">查看更多</string>
    <string name="footer_hint_ready">松开载入更多</string>
    <string name="classifyname">业务类别</string>
    <string name="resonname">业务类型</string>
    <string name="date">日期</string>
    <string name="new_billing">新建账单</string>
    <string name="zhuxing">柱形图</string>
    <string name="bill_number">账单数量</string>
    <string name="person_name">人员姓名</string>
    <string name="express_person">快递员</string>
    <string name="express_person_name">快递员姓名</string>


    <string name="new_express">新建快递单</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_account_management">AccountManagementActivity</string>
    <string name="title_activity_add_express_number">AddExpressNumberActivity</string>
</resources>
