<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/text_id"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:lines="1"
        android:text="序号" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

    <TextView
        android:id="@+id/classifyname"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_weight="1.5"
        android:textColor="#000000"
        android:textSize="15sp"
        android:lines="1"
        android:gravity="center"
        android:text="@string/classifyname" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>

    <TextView
        android:id="@+id/resonname"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:lines="1"
        android:gravity="center"
        android:text="@string/resonname" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#000000"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/date" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>
    <TextView
        android:id="@+id/price"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="10dip"
        android:textColor="#000000"
        android:paddingTop="10dip"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/prices" />
    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3"/>
    <TextView
        android:id="@+id/remark"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="10dip"
        android:textColor="#000000"
        android:paddingTop="10dip"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/remark_information" />
</LinearLayout>
